remove unused endpoints, get ready for deployment to production