@@ -1,75 +1,67 @@
 package com.example.wnabudgetbackend.config;
 
 import com.example.wnabudgetbackend.repository.UserRepository;
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.lang.NonNull;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Value("#{'${frontend.origin.pattern}'.split(',')}")
+    private List<String> FRONTEND_PATTERNS;
+
     @Autowired private OAuth2SuccessHandler oAuth2SuccessHandler;
     @Autowired private JwtUtil jwtUtil;
     @Autowired private UserRepository userRepo;
     @Autowired private CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
 
-    @Value("${frontend.url}")
-    private String URL;
-
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(customizer -> {
-                    customizer.configurationSource(corsConfigurationSource());
-                })
+                .cors(c -> c.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(sm ->
+                        sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/auth/**", "/oauth2/**").permitAll()
-                        .anyRequest().authenticated()
-                )
+                        .anyRequest().authenticated())
                 .exceptionHandling(ex -> ex
-                        .authenticationEntryPoint(customAuthenticationEntryPoint)
-                )
+                        .authenticationEntryPoint(customAuthenticationEntryPoint))
                 .oauth2Login(oauth2 -> oauth2
-                        .successHandler(oAuth2SuccessHandler)
-                );
+                        .successHandler(oAuth2SuccessHandler));
 
         http.addFilterBefore(jwtFilter(), UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 
     private CorsConfigurationSource corsConfigurationSource() {
-        return new CorsConfigurationSource() {
-            @Override
-            public CorsConfiguration getCorsConfiguration(@NonNull HttpServletRequest request) {
-                CorsConfiguration config = new CorsConfiguration();
-                config.setAllowedOrigins(Collections.singletonList(URL));
-                config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH"));
-                config.setAllowedHeaders(List.of("*"));
-                config.setAllowCredentials(true);
-                return config;
-            }
+        return req -> {
+            CorsConfiguration cfg = new CorsConfiguration();
+            cfg.setAllowedOriginPatterns(FRONTEND_PATTERNS);
+            cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE"));
+            cfg.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+            cfg.setExposedHeaders(List.of("Authorization"));
+            cfg.setAllowCredentials(false);
+            cfg.setMaxAge(3600L);
+            return cfg;
         };
     }
 
     @Bean
-    public JwtAuthenticationFilter jwtFilter() {
+    public JwtAuthenticationFilter jwtFilter () {
         return new JwtAuthenticationFilter(jwtUtil, userRepo);
     }
 }
